# pmem-project-memory-tool-for-claude-code

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LESSONS_LEARNED.md  LICENSE  README.md  ROADMAP.md  SCOPE.md  TASKS.md  pyproject.toml
docs/: configuration.md  integration-guide.md  multi-collection-design.md
skills/: README.md  claude-md-snippet.md  reindex.md  sleep.md  welcome.md
src/project_memory/: __init__.py  cli.py  config.py  indexer.py  mcp_server.py  query.py  store.py  update_check.py  watcher.py
tests/: test_config.py  test_indexer.py  test_store.py  test_watcher.py
