[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-memory-tool"
version = "0.5.2"
description = "Local-first RAG memory layer for Claude Code projects"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "click>=8.1",
    "httpx>=0.27",
    "pathspec>=0.12",
    "mcp>=1.0",
]

[project.scripts]
pmem = "project_memory.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
